@@ -1,3 +1,7 @@
+2010-11-17  Raúl Mateos  <raulofpandora@gmail.com>
+
+	* include/functions_events.php: Deleted old code. Simplify.
+
 2010-11-17  Miguel de Dios  <miguel.dedios@artica.es>
 	
 	* pandora_console.redhat.spec: re-enabled the check dir "data_in" in
